Refactored header layout and title styling for improved alignment and animation effect. Added `display: flex` and `justify-content: center` to `header` for centering the title. Adjusted `::before` pseudo-element for the title to ensure it covers the full width during animations. Restored original code structure to maintain the intended visual layout and effect.

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,30 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: center;
   padding: 0.5rem 1rem 0
 }
 
 .header__title {
+  color: var(--bg-green);
   font-size: clamp(1.5rem, 2vw + 1rem, 3rem);
   font-weight: 500;
   text-align: center;
   text-transform: uppercase;
+  position: relative;
+  z-index: 0;
+  display: inline-flex;
+}
+
+.header__title::before {
+  content: attr(data-text);
+  color: var(--bg-bright );
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 1
 }
 
 .contents {
